ingress/confluence-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: confluence-ingress
  namespace: kidangel
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  tls:
#  - hosts:
#    - django.devopsgalaxy.com
#    secretName: aks-ingress-tls
  rules:
  - host: confluence.devopsgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: confluence-service
          servicePort: 8090
