ingress/jenkins-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress-tls
  namespace: kidangel
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/whitelist-source-range: 52.77.225.197/32
spec:
  tls:
  - hosts:
    - jenkins.devopsgalaxy.com
    secretName: jenkins-devopsgalaxy-cert
  rules:
  - host: jenkins.devopsgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 8080
