ingress/nexus-ingress-devopsgalaxy-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress-devopsgalaxy-tls
  namespace: kidangel
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/whitelist-source-range: 52.77.225.197/32
spec:
  tls:
  - hosts:
    - nexus.devopsgalaxy.com
    secretName: nexus-devopsgalaxy-cert
  rules:
  - host: nexus.devopsgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus3-service
          servicePort: 8081
