ingress/nexus3-ingress-kizcloud-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus3-ingress-kizcloud-tls
  namespace: kidangel
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - nexus3.kizcloud.com
    secretName: kizcloud-cert
  rules:
  - host: nexus3.kizcloud.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus3-service
          servicePort: 8081
