ingress/nexus3-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: kidangel
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  tls:
#  - hosts:
#    - django.devopsgalaxy.com
#    secretName: aks-ingress-tls
  rules:
  - host: nexus.devopsgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus3-service
          servicePort: 8081
