ingress/wordpress-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress-devopsgalaxy-tls
  namespace: kidangel
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - wordpress.devopsgalaxy.com
    secretName: wordpress-devopsgalaxy-cert
  rules:
  - host: wordpress.devopsgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: 80
