ingress/wordpress-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: kidangel
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
#  tls:
#  - hosts:
#    - django.devopsgalaxy.com
#    secretName: aks-ingress-tls
  rules:
  - host: wordpress.devopsgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: 80
